# robo-aspirador

./: .gitignore  CMakeLists.txt  Makefile  README.md  plan.c  plan.h  vacuum.c  vacuum.h
tarefa-03/: Makefile  README.md  anneling.c  anneling.h  beam.c  beam.h  common.c  common.h  main.c  objectiveFunction.c  objectiveFunction.h
tarefa-04/: Makefile  README.md  common.c  common.h  main.c  objectiveFunction.c  objectiveFunction.h  pso.c  pso.h
trabalho-01/: Makefile  README.md  charged_particle.c  charged_particle.h  common.c  common.h  main.c  objectiveFunction.c  objectiveFunction.h  predator_prey.c  predator_prey.h  pso.c  pso.h  sweep.c
trabalho-01/data/: plot.py  plot2.py  resultados_agregados.csv  resultados_brutos.csv  varredura_brutos.csv
trabalho-01/docs/: varredura-hiperparametros.md
